@@ -1,5 +1,11 @@
 ChangeLog for herdstat
 
+2005-07-16 Aaron Walker <ka0ttic@gentoo.org>
+
+	* lib/string.cc, lib/string.hh: Define stringify<> inline instead of
+	in the source file, otherwise we get an undefined reference if we try
+	calling it.
+
 2005-07-13 Aaron Walker <ka0ttic@gentoo.org>
 
 	* configure.ac: Updated version (1.1.1_p3 release).
